feat: add put leadboard route
